<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>com.github.zhkl0228</groupId>
        <artifactId>impersonator</artifactId>
        <version>1.10.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <name>http3</name>
    <artifactId>impersonator-http3</artifactId>

    <properties>
        <!--
            Java 21, one step above the Java 11 of the modules below, for one reason:
            java.net.http.HttpClient became AutoCloseable in 21. This module hands out a client that
            owns QUIC connections, so it has to be closed, and on 11 that meant an abstract subclass
            of our own for callers to import and to name in a try-with-resources. Now newHttpClient()
            returns java.net.http.HttpClient and the language closes it.
        -->
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <!-- http3 is Java 21; the properties block above says why. -->
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <!-- Overrides the parent's 8; this module is Java 21. -->
                    <source>21</source>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <!--
                The connections, and everything about them that is not java.net.http's. This module is
                the adapter that puts one behind java.net.http.HttpClient, which is the only part that
                needs a Java 21; see that module's pom.
            -->
            <groupId>com.github.zhkl0228</groupId>
            <artifactId>impersonator-http3-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.zhkl0228</groupId>
            <artifactId>impersonator-kwik</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <!--
                flupke is not vendored. It reaches kwik through 13 classes, none of them in a package
                impersonator-kwik differs from upstream in, and this module needs nothing from it that
                is not public: Http3SingleConnectionClient takes a QuicConnection that is already made,
                which is the whole seam. See ../quic/kwik/UPSTREAM.md.
            -->
            <groupId>tech.kwik</groupId>
            <artifactId>flupke</artifactId>
            <version>0.9.4</version>
            <exclusions>
                <exclusion>
                    <groupId>tech.kwik</groupId>
                    <artifactId>kwik</artifactId>
                </exclusion>
                <exclusion>
                    <!-- Vendored too; see ../quic/qpack/UPSTREAM.md. -->
                    <groupId>tech.kwik</groupId>
                    <artifactId>qpack</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <!--
                flupke needs it and no longer gets it through kwik. This module vendors it, because
                honestly advertising Chrome's QPACK settings means implementing the dynamic table
                upstream does not have; see ../quic/qpack/UPSTREAM.md.
            -->
            <groupId>com.github.zhkl0228</groupId>
            <artifactId>impersonator-qpack</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
